--- a/DouYuZB/Classes/CommonView/RZZCollectionPrettyCell.xib
+++ b/DouYuZB/Classes/CommonView/RZZCollectionPrettyCell.xib
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="RZZCollectionPrettyCell" customModule="DouYuZB" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="RZZCollectionPrettyCell" customModule="DouYuZB">
             <rect key="frame" x="0.0" y="0.0" width="289" height="246"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="289" height="246"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mna-5U-q4h">
+                    <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mna-5U-q4h">
                         <rect key="frame" x="0.0" y="222" width="46" height="14"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="14" id="pif-8D-TTh"/>
@@ -46,40 +46,47 @@
                             <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                         </userDefinedRuntimeAttributes>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="66666" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R2Z-dr-fXZ">
-                        <rect key="frame" x="224" y="5" width="60" height="20"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.50404002568493156" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sGn-Gf-qOD">
+                        <rect key="frame" x="221" y="5" width="60" height="20"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="20" id="Ji7-sv-Og1"/>
-                            <constraint firstAttribute="width" constant="60" id="lYw-oR-KJP"/>
+                            <constraint firstAttribute="height" constant="20" id="Boo-FG-327"/>
+                            <constraint firstAttribute="width" constant="60" id="uZI-q7-gbj"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
+                        <state key="normal" title="66666在线">
+                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </state>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                 <integer key="value" value="3"/>
                             </userDefinedRuntimeAttribute>
                             <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                         </userDefinedRuntimeAttributes>
-                    </label>
+                    </button>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="R2Z-dr-fXZ" secondAttribute="trailing" constant="5" id="9jx-5f-f8F"/>
+                <constraint firstItem="sGn-Gf-qOD" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="2mh-8o-0SQ"/>
                 <constraint firstItem="7my-Tm-nai" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="B1B-np-wmN"/>
                 <constraint firstItem="eYw-Pq-V2H" firstAttribute="top" secondItem="7my-Tm-nai" secondAttribute="bottom" constant="5" id="OjH-I8-pZC"/>
                 <constraint firstItem="7my-Tm-nai" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="S5x-6h-8XH"/>
+                <constraint firstAttribute="trailing" secondItem="sGn-Gf-qOD" secondAttribute="trailing" constant="8" id="Z8P-Oo-Blq"/>
                 <constraint firstItem="eYw-Pq-V2H" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="ck3-fm-9YK"/>
                 <constraint firstAttribute="trailing" secondItem="eYw-Pq-V2H" secondAttribute="trailing" constant="5" id="dIJ-V8-Y9y"/>
                 <constraint firstItem="Mna-5U-q4h" firstAttribute="top" secondItem="eYw-Pq-V2H" secondAttribute="bottom" constant="5" id="q5c-a8-8Z1"/>
-                <constraint firstItem="R2Z-dr-fXZ" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="qts-Dg-Hzw"/>
                 <constraint firstAttribute="trailing" secondItem="7my-Tm-nai" secondAttribute="trailing" id="rZY-2J-9Bv"/>
                 <constraint firstAttribute="bottom" secondItem="Mna-5U-q4h" secondAttribute="bottom" constant="10" id="slN-Zp-o2y"/>
                 <constraint firstItem="Mna-5U-q4h" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="zub-Cx-yHA"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="289" height="246"/>
+            <connections>
+                <outlet property="cityBtn" destination="Mna-5U-q4h" id="xZ9-H3-kuA"/>
+                <outlet property="iconImageView" destination="7my-Tm-nai" id="lSe-F3-Ohi"/>
+                <outlet property="nickNameLabel" destination="eYw-Pq-V2H" id="MGT-71-UdL"/>
+                <outlet property="onlineBtn" destination="sGn-Gf-qOD" id="Ctu-Ua-sBt"/>
+            </connections>
             <point key="canvasLocation" x="7.2000000000000002" y="136.73163418290855"/>
         </collectionViewCell>
     </objects>
