--- a/DouYuZB/Classes/Home/View/RZZCollectionHeaderView.xib
+++ b/DouYuZB/Classes/Home/View/RZZCollectionHeaderView.xib
@@ -1,36 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RZZCollectionHeaderView" customModule="DouYuZB" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="U6b-Vx-4bR">
-            <rect key="frame" x="0.0" y="0.0" width="446" height="46"/>
+        <collectionReusableView autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="U6b-Vx-4bR" customClass="RZZCollectionHeaderView" customModule="DouYuZB" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="456" height="117"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NwQ-Du-nlp">
-                    <rect key="frame" x="0.0" y="0.0" width="446" height="10"/>
-                    <color key="backgroundColor" red="0.91764705882352937" green="0.91764705882352937" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="10" id="YVr-bc-aj4"/>
-                    </constraints>
-                </view>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_header_phone" translatesAutoresizingMaskIntoConstraints="NO" id="edW-Pn-ocU">
-                    <rect key="frame" x="10" y="21" width="18" height="18"/>
+                    <rect key="frame" x="10" y="20" width="18" height="18"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="18" id="AFA-qw-xuV"/>
-                        <constraint firstAttribute="width" constant="18" id="xV9-we-90M"/>
+                        <constraint firstAttribute="width" constant="18" id="dbm-Pi-IkV"/>
+                        <constraint firstAttribute="height" constant="18" id="oZw-lo-bY6"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="颜值" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WzW-OU-cej">
-                    <rect key="frame" x="33" y="20" width="33" height="20"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="颜值" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WzW-OU-cej">
+                    <rect key="frame" x="33" y="19" width="144" height="20"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -38,28 +31,36 @@
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e0l-cH-ah7">
                     <rect key="frame" x="376" y="15" width="60" height="26"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="60" id="ky1-YF-FBl"/>
+                        <constraint firstAttribute="height" constant="26" id="8Ui-RP-WH6"/>
+                        <constraint firstAttribute="width" constant="60" id="JvB-HC-R8f"/>
                     </constraints>
                     <state key="normal" title="更多 &gt;">
                         <color key="titleColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                     </state>
                 </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NwQ-Du-nlp" customClass="RZZCollectionHeaderView" customModule="DouYuZB" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="0.0" width="456" height="10"/>
+                    <color key="backgroundColor" red="0.91764705882352937" green="0.91764705882352937" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="10" id="61h-9C-cYx"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="WzW-OU-cej" firstAttribute="centerY" secondItem="edW-Pn-ocU" secondAttribute="centerY" id="FNj-oj-VcQ"/>
-                <constraint firstItem="VXr-Tz-HHm" firstAttribute="trailing" secondItem="NwQ-Du-nlp" secondAttribute="trailing" id="FQF-M6-8pM"/>
-                <constraint firstItem="NwQ-Du-nlp" firstAttribute="top" secondItem="VXr-Tz-HHm" secondAttribute="top" id="KRw-mo-mBX"/>
-                <constraint firstItem="e0l-cH-ah7" firstAttribute="top" secondItem="NwQ-Du-nlp" secondAttribute="bottom" constant="5" id="LNB-b4-84P"/>
-                <constraint firstItem="edW-Pn-ocU" firstAttribute="top" secondItem="NwQ-Du-nlp" secondAttribute="bottom" constant="11" id="OtF-aq-i4e"/>
-                <constraint firstItem="VXr-Tz-HHm" firstAttribute="trailing" secondItem="e0l-cH-ah7" secondAttribute="trailing" constant="10" id="ZjZ-B1-hHT"/>
-                <constraint firstItem="WzW-OU-cej" firstAttribute="leading" secondItem="edW-Pn-ocU" secondAttribute="trailing" constant="5" id="dsJ-c7-Vdn"/>
-                <constraint firstItem="NwQ-Du-nlp" firstAttribute="leading" secondItem="VXr-Tz-HHm" secondAttribute="leading" id="hLL-8h-mnl"/>
-                <constraint firstItem="VXr-Tz-HHm" firstAttribute="bottom" secondItem="e0l-cH-ah7" secondAttribute="bottom" constant="5" id="tR1-j9-cup"/>
-                <constraint firstItem="edW-Pn-ocU" firstAttribute="leading" secondItem="VXr-Tz-HHm" secondAttribute="leading" constant="10" id="xcM-bQ-7JF"/>
+                <constraint firstItem="edW-Pn-ocU" firstAttribute="top" secondItem="NwQ-Du-nlp" secondAttribute="bottom" constant="10" id="7Cd-oh-Jq8"/>
+                <constraint firstItem="NwQ-Du-nlp" firstAttribute="top" secondItem="U6b-Vx-4bR" secondAttribute="top" id="9gc-Qi-BCL"/>
+                <constraint firstItem="edW-Pn-ocU" firstAttribute="leading" secondItem="U6b-Vx-4bR" secondAttribute="leading" constant="10" id="Eb5-gu-cyW"/>
+                <constraint firstAttribute="trailing" secondItem="e0l-cH-ah7" secondAttribute="trailing" constant="20" id="REX-xg-MUd"/>
+                <constraint firstItem="NwQ-Du-nlp" firstAttribute="leading" secondItem="U6b-Vx-4bR" secondAttribute="leading" priority="750" id="aZk-JQ-ApQ"/>
+                <constraint firstItem="e0l-cH-ah7" firstAttribute="top" secondItem="NwQ-Du-nlp" secondAttribute="bottom" constant="5" id="dxa-GD-IF8"/>
+                <constraint firstAttribute="trailing" secondItem="NwQ-Du-nlp" secondAttribute="trailing" priority="750" id="kb9-et-iab"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="VXr-Tz-HHm"/>
-            <point key="canvasLocation" x="-22.399999999999999" y="179.91004497751126"/>
+            <connections>
+                <outlet property="iconImageView" destination="edW-Pn-ocU" id="Y4s-Sb-2Fp"/>
+                <outlet property="titleLabel" destination="WzW-OU-cej" id="YOa-Ww-2Pi"/>
+            </connections>
+            <point key="canvasLocation" x="-558.39999999999998" y="260.41979010494754"/>
         </collectionReusableView>
     </objects>
     <resources>
