--- a/DouYuZB/Classes/Home/View/RZZCollectionHeaderView.xib
+++ b/DouYuZB/Classes/Home/View/RZZCollectionHeaderView.xib
@@ -17,7 +17,6 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_header_phone" translatesAutoresizingMaskIntoConstraints="NO" id="edW-Pn-ocU">
                     <rect key="frame" x="10" y="20" width="18" height="18"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="18" id="dbm-Pi-IkV"/>
                         <constraint firstAttribute="height" constant="18" id="oZw-lo-bY6"/>
                     </constraints>
                 </imageView>
@@ -58,6 +57,7 @@
             </constraints>
             <connections>
                 <outlet property="iconImageView" destination="edW-Pn-ocU" id="Y4s-Sb-2Fp"/>
+                <outlet property="moreBtn" destination="e0l-cH-ah7" id="kkX-fI-gei"/>
                 <outlet property="titleLabel" destination="WzW-OU-cej" id="YOa-Ww-2Pi"/>
             </connections>
             <point key="canvasLocation" x="-558.39999999999998" y="260.41979010494754"/>
