--- a/DouYuZB/Classes/Home/View/RZZGameCollectionViewCell.xib
+++ b/DouYuZB/Classes/Home/View/RZZGameCollectionViewCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="RZZGameCollectionViewCell" customModule="DouYuZB" customModuleProvider="target">
+        <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="RZZGameCollectionViewCell" customModule="DouYuZB" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="80" height="90"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -19,18 +19,16 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="王者荣耀" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="52n-Py-6eO">
-                        <rect key="frame" x="15" y="65" width="50" height="15"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="15" id="xQ5-u4-vQb"/>
-                        </constraints>
+                        <rect key="frame" x="15" y="64.5" width="50" height="15"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ue0-4d-ert">
-                        <rect key="frame" x="17.5" y="15" width="45" height="45"/>
+                        <rect key="frame" x="17.5" y="14.5" width="45" height="45"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="ue0-4d-ert" secondAttribute="height" multiplier="1:1" id="3XS-oM-Bqk"/>
+                            <constraint firstAttribute="height" constant="45" id="4RY-m6-oYC"/>
+                            <constraint firstAttribute="width" constant="45" id="i4M-0o-IhA"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -39,14 +37,23 @@
                             <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksTobounds" value="YES"/>
                         </userDefinedRuntimeAttributes>
                     </imageView>
+                    <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uj1-3k-QQH">
+                        <rect key="frame" x="0.0" y="90" width="80" height="1"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="uQp-gr-NI7"/>
+                        </constraints>
+                    </view>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstItem="ue0-4d-ert" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="18E-WL-MPY"/>
-                <constraint firstAttribute="bottom" secondItem="52n-Py-6eO" secondAttribute="bottom" constant="10" id="Ff3-6O-urb"/>
-                <constraint firstItem="52n-Py-6eO" firstAttribute="top" secondItem="ue0-4d-ert" secondAttribute="bottom" constant="5" id="Utm-GM-b8T"/>
-                <constraint firstItem="52n-Py-6eO" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="W7d-ch-FRn"/>
-                <constraint firstItem="ue0-4d-ert" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="15" id="czP-cU-AbX"/>
+                <constraint firstItem="52n-Py-6eO" firstAttribute="top" secondItem="ue0-4d-ert" secondAttribute="bottom" constant="5" id="0py-yp-xa3"/>
+                <constraint firstItem="52n-Py-6eO" firstAttribute="centerX" secondItem="ue0-4d-ert" secondAttribute="centerX" id="3KG-Df-F2f"/>
+                <constraint firstAttribute="trailing" secondItem="uj1-3k-QQH" secondAttribute="trailing" id="GIJ-aB-lbD"/>
+                <constraint firstItem="ue0-4d-ert" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="ZsK-zv-vtN"/>
+                <constraint firstAttribute="bottom" secondItem="uj1-3k-QQH" secondAttribute="bottom" constant="-1" id="cNv-YO-WJJ"/>
+                <constraint firstItem="uj1-3k-QQH" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="eQH-GS-DHA"/>
+                <constraint firstItem="ue0-4d-ert" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" constant="-8" id="g2j-vn-jYw"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="248" height="182"/>
